<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vinitvs.shoppingcart.ui.checkout.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/pad_small"
        android:orientation="vertical"
        android:weightSum="100">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="69"
            android:text="@string/hello_blank_fragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:text="Sub Total : " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:text="Tax : " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:text="Total Amount: " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <RadioGroup
                    android:id="@+id/radiogroup_paymentType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="99">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="33">

                            <RadioButton
                                android:padding="@dimen/pad_xsmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:autoSizeTextType="uniform"
                                android:checked="true"
                                android:text="@string/cash" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="33">

                            <RadioButton
                                android:padding="@dimen/pad_xsmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:layout_weight="33"
                                android:autoSizeTextType="uniform"
                                android:text="@string/credit" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="33">

                            <RadioButton
                                android:padding="@dimen/pad_xsmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:autoSizeTextType="uniform"
                                android:text="@string/paypal" />
                        </LinearLayout>
                    </LinearLayout>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:background="@color/colorAccent"
                    android:gravity="center">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:autoSizeTextType="uniform"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/pad_medium"
                        android:text="@string/clear"
                        android:textAllCaps="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:background="@color/colorAccent"
                    android:gravity="center">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:autoSizeTextType="uniform"
                        android:background="@color/colorAccent"
                        android:padding="@dimen/pad_medium"
                        android:text="@string/checkout"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
